nu moet ie t wel doen, heb alle errors weg gewerkt :D idk wat je precies wilde dat k deed, idk hoe k m moet flashen maar ja ziet er goed uit zo!
Co-authored-by: Deedikjepijn <jorisk@duck.com>

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,7 +4,7 @@
 ;   Upload options: custom upload port, speed and extra flags
 ;   Library options: dependencies, extra library storages
 ;   Advanced options: extra scripting
-;o
+;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
@@ -13,5 +13,6 @@ platform = espressif32
 board = upesy_wroom
 framework = arduino
 lib_deps = 
-	esphome/ESP32-audioI2S@^2.0.6
 	earlephilhower/ESP8266Audio@^1.9.7
+	bblanchon/ArduinoJson@^6.21.2
+	esphome/ESP32-audioI2S@^2.0.7
